--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 10px;
+  /* grid-template-columns: repeat(5, 20%); */
+  grid-gap: 0px;
   grid-template-rows: 8% 25% 25% 25% 14%;
   min-height: 100vh;
+}
 
+#container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   border: solid 2px black;
   margin-left: 200px;
   margin-right:200px;
   padding: 10px;
+  grid-area: 2/1/5/7;
 }
 
 header {
@@ -19,24 +25,20 @@ header {
 
 
 #map {
-  /* height: 800px;
-  width: 700px */
-  grid-row: 2/5;
-  grid-column: 2/6;
+  grid-row: 1/5;
+  grid-column: 1/4;
 }
 
 #scores {
-  grid-column: 6;
+  grid-column: 4;
   grid-row: 2;
 }
 
 footer {
   grid-column: 1 / 7;
   grid-row: 5;
-  text-align:center;
-	background-color: gray;
+  text-align: right;
+	background-color: #DFE0E0;
 
-	margin-top : 30px;
-	margin-bottom : 30px;
-	padding: 40px;
+  padding-right: 10px;
 }
