--- a/style.css
+++ b/style.css
@@ -23,6 +23,40 @@ header {
   text-align:center;
 }
 
+.button {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align: center;
+  height:100px;
+  width:200px;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgba(220, 0, 0, 1);
+  background-image: linear-gradient(to top left,
+                                    rgba(0, 0, 0, .2),
+                                    rgba(0, 0, 0, .2) 30%,
+                                    rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+              inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.button:hover {
+    color: rgba(255, 0, 0, 1);
+    background-color: black;
+}
+
+.button:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
 
 #map {
   grid-row: 1/5;
