--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ footer {
   grid-row: 2/5;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 4em;
   grid-gap: 4px;
   border: solid 2px black;
@@ -51,6 +51,11 @@ footer {
   grid-column: 1/3;
 }
 
+#scores {
+  grid-column: 3;
+  grid-row: 2;
+}
+
 #inventaire {
   grid-column: 1;
   grid-row: 4;
@@ -58,8 +63,8 @@ footer {
   display: grid;
   grid-template-columns: repeat(7, 13%);
   grid-template-rows: 100%;
-  grid-gap: 4px;
-  /* padding-left:1em; */
+  grid-gap: 4px; */
+  padding-left:1em;
 
   z-index: 3;
 
@@ -71,14 +76,8 @@ footer {
 img {
     height:100%;
     /* object-fit:cover 100%; */
-    z-index: 2;
+    z-index: 1;
 
-}
-
-
-#scores {
-  grid-column: 3;
-  grid-row: 2;
 }
 
 
