--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 
   font-family: 'Open Sans', sans-serif;
   font-weight: lighter;
+
+  background-image: url('image/apple-touch-icon.png');
 }
 
 header {
@@ -42,6 +44,19 @@ footer {
   grid-gap: 4px;
   border: solid 2px black;
   padding: 10px;
+}
+
+#containerStart {
+  grid-column: 2;
+  grid-row: 2/5;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 4em;
+  grid-gap: 4px;
+  border: solid 2px black;
+  padding: 10px;
+  background-image: url("image/image_fond.png");
 }
 
 
@@ -79,15 +94,23 @@ img {
     z-index: 1;
 
 }
+h2 {
+  grid-column: 2;
+  grid-row: 3;
+  text-align: center  ;
+}
 
 
 
 /*---------BOUTON----------*/
 .button {
+  margin: auto;
   display:flex;
   justify-content:center;
   align-items:center;
   text-align: center;
+  grid-column: 2;
+  grid-row: 2;
   height:100px;
   width:200px;
   border: 0;
