--- a/style.css
+++ b/style.css
@@ -47,15 +47,16 @@ footer {
 }
 
 #containerStart {
-  grid-column: 2;
-  grid-row: 2/5;
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+  /*
 
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 4em;
   grid-gap: 4px;
   border: solid 2px black;
-  padding: 10px;
+  padding: 10px; */
   background-image: url("image/image_fond.png");
 }
 
@@ -90,10 +91,9 @@ footer {
 
 img {
     height:100%;
-    /* object-fit:cover 100%; */
     z-index: 1;
-
 }
+
 h2 {
   grid-column: 2;
   grid-row: 3;
@@ -105,13 +105,13 @@ h2 {
 BOUTON----------------------------------------------------------------------------
 */
 .button {
+  /* grid-column: 2;
+  grid-row: 4; */
   margin: auto;
   display:flex;
   justify-content:center;
   align-items:center;
   text-align: center;
-  grid-column: 2;
-  grid-row: 2;
   height:100px;
   width:200px;
   border: 0;
@@ -133,7 +133,7 @@ BOUTON--------------------------------------------------------------------------
 
 .button:hover {
     color: rgba(255, 0, 0, 1);
-    background-color: black;
+    background-color: rgba(55, 40, 50, 1);
 }
 
 .button:active {
