--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ Menu----------------------------------------------------------------------------
 #bandeau {
 	width=100%;
   margin: 0 auto;
+  margin-bottom: 10px;
   background-color: white;
 	position: sticky;
 	top: 0px;
