--- a/style.css
+++ b/style.css
@@ -20,9 +20,17 @@ body {
 }
 
 header {
-  grid-column: span 4;
+  grid-column: 1/-1;
   grid-row: 1;
   text-align:center;
+  background: url(image/sea_logo4.png) no-repeat;
+  background-size: auto 100%;
+}
+
+header #logo {
+
+  /* object-fit: cover; */
+  z-index: 4;
 }
 
 footer {
@@ -30,11 +38,10 @@ footer {
   grid-row: 5;
   text-align: right;
 	background-color: #DFE0E0;
-
   padding-right: 10px;
 }
 
-#container {
+#container, #containerStart {
   grid-column: 2;
   grid-row: 2/5;
 
@@ -47,17 +54,7 @@ footer {
 }
 
 #containerStart {
-  grid-column: 2;
-  grid-row: 2/5;
-
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 4em;
-  grid-gap: 4px;
-  border: solid 2px black;
-  padding: 10px;
   background-image: url("image/image_fond.png");
-  justify-content: center;
 }
 
 #login {
@@ -101,8 +98,11 @@ img {
 }
 
 h2 {
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 3;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: 0px;
 }
 
 
@@ -164,9 +164,20 @@ Menu----------------------------------------------------------------------------
 	list-style-type: none;
 }
 
+#logo {
+  grid-row: 1;
+  background: url(image/sea_logo4.png) no-repeat;
+  /* background-size: auto 100%; */
+  /* position:absolute;
+  height: 100px;
+  top: 10px;
+  left: 10px;
+  float: left; */
+}
+
 #bandeau ul li {
-	float: left;
-	width: 25%;
+	float: right;
+	width: 15%;
 	text-aligh: center;
   position: relative;
 }
