--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700');
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 
 *{
   box-sizing: border-box;
@@ -23,15 +24,14 @@ header {
   grid-column: 1/-1;
   grid-row: 1;
   text-align:center;
-  background: url(image/sea_logo4.png) no-repeat;
-  background-size: auto 100%;
+  /* background: url(image/sea_logo4.png) no-repeat;
+  background-size: auto 100%; */
 }
 
-header #logo {
-
-  /* object-fit: cover; */
+/* header #logo {
+  object-fit: contain;
   z-index: 4;
-}
+} */
 
 footer {
   grid-column: 1 / 7;
@@ -51,6 +51,7 @@ footer {
   grid-gap: 4px;
   border: solid 2px black;
   padding: 10px;
+  background-color: rgb(240, 240, 250);
 }
 
 #containerStart {
@@ -89,12 +90,16 @@ footer {
 
   /* background: url(image/inventaire.PNG) no-repeat;
   background-size: auto 100%; */
-
 }
 
-img {
+#inventaire img {
     height:100%;
     z-index: 1;
+}
+
+h1 {
+  /* Bon sur la page a propos le titre a des marges qui sorte du cul */
+  margin: 0px;
 }
 
 h2 {
@@ -107,7 +112,7 @@ h2 {
 
 
 /*
-BOUTON INDEX--------------------------------------------------------------------
+BOUTON START--------------------------------------------------------------------
 */
 .button {
   grid-column: 2;
@@ -152,7 +157,8 @@ BOUTON INDEX--------------------------------------------------------------------
 Menu----------------------------------------------------------------------------
 */
 #bandeau {
-	width=100%;
+	width=80%;
+  grid-column: 2/-1;
   margin: 0 auto;
   margin-bottom: 10px;
   background-color: white;
@@ -160,45 +166,278 @@ Menu----------------------------------------------------------------------------
 	top: 0px;
 }
 
-#bandeau ul {
-	list-style-type: none;
+
+
+#bandeau a {
+  /* transition: all 0.2s ;          /* Ajout des effets de transition */ */
 }
 
-#logo {
-  grid-row: 1;
-  background: url(image/sea_logo4.png) no-repeat;
-  /* background-size: auto 100%; */
-  /* position:absolute;
-  height: 100px;
-  top: 10px;
-  left: 10px;
-  float: left; */
+#bandeau ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+/* #logo {
+  height: 100%;
+} */
+
+#bandeau img {
+  height: 47px;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 5px;
+  padding-top: 5px;
 }
 
 #bandeau ul li {
-	float: right;
-	width: 15%;
-	text-aligh: center;
-  position: relative;
+	float: left;
 }
 
-#bandeau ul::after{
-  content: "";
-  display: table;
-  clear: both;
-}
-
-#bandeau a {
-	/*text-align: center;*/
-	text-decoration: none;
-	color: black;
-	border-bottom: 2px solid transparent;
-	padding: 10px 0px;
+#bandeau li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 15px 18px;
+  text-decoration: none;
 }
 
 #bandeau a:hover {
 	color: orange;
-	border-bottom: 2px solid gold;
 }
 
+#bandeau li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
 /* https://www.pierre-giraud.com/html-css-apprendre-coder-cours/creation-menu-deroulant/ */
+
+
+/*
+CONTACT----------------------------------------------------------------------------
+*/
+.contact {
+  grid-column: 2;
+  grid-row: 2/4;
+  width: 35rem;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  overflow: hidden;
+}
+
+.contact h1, .contact p {
+  margin: 0;
+  padding: 0;
+  font-family: monospace;
+}
+.contact h1 {
+  font-family: 'Dancing Script';
+}
+
+.contact textarea, .contact input, .contact button {
+  line-height: 1.5rem;
+  border: 0;
+  outline: none;
+  font-family: inherit;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.contact textarea, .contact input {
+  color: #4e5e72;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgb(229, 225, 187)' x='0' y='23' width='10' height='1'/></svg>");
+}
+.contact textarea {
+ width: 100%;
+ height: 8rem;
+ resize: none;
+}
+.contact input {
+ width: 50%;
+ margin-bottom: 1rem;
+}
+.contact input[type=text]:invalid, .contact input [type=email]:invalid {
+    box-shadow: none;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgba(240, 132, 114, 0.5)' x='0' y='23' width='10' height='1'/></svg>");
+  }
+.contact button {
+ padding: 0.5rem 1rem;
+ border-radius: 0.25rem;
+ background-color: rgba(78, 94, 114, 0.9);
+ color: white;
+ font-size: 1rem;
+ transition: background-color 0.2s;
+}
+.contact button:hover,button :focus {
+    outline: none;
+    background-color: rgba(78, 94, 114, 1);
+  }
+.contact input[type=text]:focus,
+.contact input[type=email]:focus,
+.contact textarea:focus {
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgba(78, 94, 114, 0.3)' x='0' y='23' width='10' height='1'/></svg>");
+  outline: none;
+}
+
+.letter {
+  left: 0;
+  right: 0;
+  top: 0;
+  width: 30rem;
+  margin: auto;
+  perspective: 60rem;
+  /* z-index: 9999; */
+}
+.side {
+  height: 12rem;
+  background-color: #fcfcf8;
+  outline: 1px solid transparent;
+}
+.side:nth-of-type(1) {
+    padding: 2rem 2rem 0;
+    border-radius: 1rem 1rem 0 0;
+    box-shadow: inset 0 0.75rem 2rem rgba(229, 225, 187, 0.5);
+  }
+.side.side:nth-of-type(2) {
+    padding: 2rem;
+    border-radius: 0 0 1rem 1rem;
+    box-shadow: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.05), inset 0 -0.57rem 2rem rgba(229, 225, 187, 0.5);
+    text-align: right;
+  }
+  .envelope {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+  }
+  .envelope.front {
+    width: 10rem;
+    height: 6rem;
+    border-radius: 0 0 1rem 1rem;
+    overflow: hidden;
+    z-index: 9999;
+    opacity: 0;
+  }
+  .envelope.front::before, .envelope.front::after {
+    position: absolute;
+    display: block;
+    width: 12rem;
+    height: 6rem;
+    background-color: #e9dc9d;
+    transform: rotate(30deg);
+    transform-origin: 0 0;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+    content: '';
+  }
+  .envelope.front::after{
+    right: 0;
+    transform: rotate(-30deg);
+    transform-origin: 100% 0;
+  }
+  .envelope.back {
+    top: -4rem;
+    width: 10rem;
+    height: 10rem;
+    overflow: hidden;
+    z-index: 10;
+    opacity: 0;
+    transform: translateY(-6rem);
+  }
+  .envelope.back::before {
+      display: block;
+      width: 10rem;
+      height: 10rem;
+      background-color: #e9dc9d;
+      border-radius: 1rem;
+      content: '';
+      transform: scaleY(0.6) rotate(45deg)
+    }
+.result-message {
+  text-align: center;
+  opacity: 0;
+  transition: all 0.3s 2s;
+  transform: translateY(15rem);
+  z-index: -9999;
+}
+.sent .letter {
+    -webkit-animation: scaleLetter 1s forwards ease-in /*,
+               pushLetter 0.5s 1.33s forwards ease-out*/ ;
+            animation: scaleLetter 1s forwards ease-in /*,
+               pushLetter 0.5s 1.33s forwards ease-out*/ ;
+               z-index: 9999;
+  }
+.sent .side:nth-of-type(1) {
+    transform-origin: 0 100%;
+    -webkit-animation: closeLetter 0.66s forwards ease-in;
+            animation: closeLetter 0.66s forwards ease-in;
+  }
+.sent .side:nth-of-type(1) h1, .sent .side:nth-of-type(1) textarea {
+    -webkit-animation: fadeOutText 0.66s forwards linear;
+            animation: fadeOutText 0.66s forwards linear;
+  }
+.sent button {
+    background-color: rgba(78, 94, 114, 0.2);
+  }
+.sent .envelope {
+    -webkit-animation: fadeInEnvelope 0.5s 1.33s forwards ease-out;
+            animation: fadeInEnvelope 0.5s 1.33s forwards ease-out;
+  }
+.sent .result-message {
+    opacity: 1;
+    transform: translateY(27rem);
+    z-index: 9999;
+  }
+
+@-webkit-keyframes closeLetter {
+   50% {transform: rotateX(-90deg);}
+   100% {transform: rotateX(-180deg);}
+}
+@keyframes closeLetter {
+   50% {transform: rotateX(-90deg);}
+   100% {transform: rotateX(-180deg);}
+}
+@-webkit-keyframes fadeOutText {
+   49% {opacity: 1;}
+   50% {opacity: 0;}
+   100% {opacity: 0;}
+}
+@keyframes fadeOutText {
+   49% {opacity: 1;}
+   50% {opacity: 0;}
+   100% {opacity: 0;}
+}
+@-webkit-keyframes fadeInEnvelope {
+  0% {opacity: 0; transform: translateY(8rem);}
+  /*90% {opacity: 1; transform: translateY(4rem);}*/
+  100% {opacity: 1; transform: translateY(4.5rem);}
+}
+@keyframes fadeInEnvelope {
+  0% {opacity: 0; transform: translateY(48rem);}
+  /*90% {opacity: 1; transform: translateY(4rem);}*/
+  100% {opacity: 1; transform: translateY(25rem);}
+}
+@-webkit-keyframes scaleLetter {
+  66% {transform: translateY(-8rem) scale(0.5, 0.5);}
+  75% {transform: translateY(-8rem) scale(0.5, 0.5);}
+  90% {transform: translateY(-8rem) scale(0.3, 0.5);}
+  97% {transform: translateY(-8rem) scale(0.33, 0.5);}
+  100%{transform: translateY(-8rem) scale(0.3, 0.5);}
+}
+@keyframes scaleLetter {
+  66% {transform: translateY(-8rem) scale(0.5, 0.5);}
+  75% {transform: translateY(-8rem) scale(0.5, 0.5);}
+  90% {transform: translateY(-8rem) scale(0.3, 0.5);}
+  97% {transform: translateY(-8rem) scale(0.33, 0.5);}
+  100%{transform: translateY(-8rem) scale(0.3, 0.5);}
+}
+
+/*
+https://codepen.io/wwwebneko/pen/RRQKzZ
+*/
