--- a/style_contact.css
+++ b/style_contact.css
@@ -1,241 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700');
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
-
-*{
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
-  grid-template-rows: 1fr 3fr 3fr 3fr 1fr;
-  height: 100vh;
-  width: 100vw;
-
-  font-family: 'Open Sans', sans-serif;
-  font-weight: lighter;
-
-  /* background-image: url('image/apple-touch-icon.png'); */
-}
-
-header {
-  grid-column: 1/-1;
-  grid-row: 1;
-  text-align:center;
-  /* background: url(image/sea_logo4.png) no-repeat;
-  background-size: auto 100%; */
-}
-
-/* header #logo {
-  object-fit: contain;
-  z-index: 4;
-} */
-
-footer {
-  grid-column: 1 / 7;
-  grid-row: 5;
-  text-align: right;
-	background-color: #DFE0E0;
-  padding-right: 10px;
-}
-
-#container, #containerStart {
-  display: inline;
-  overflow: hidden;
-  grid-column: 2;
-  grid-row: 2/5;
-
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 4em;
-  grid-gap: 4px;
-  border: solid 2px black;
-  padding: 10px;
-  background-color: rgb(240, 240, 250);
-}
-
-h1 {
-  /* Bon sur la page a propos le titre a des marges qui sorte du cul */
-  margin: 0px;
-}
-
-h2 {
-  grid-column: 2;
-  grid-row: 3;
-  text-align: center;
-  margin-top: auto;
-  margin-bottom: 0px;
-}
-
-/*
-Menu----------------------------------------------------------------------------
-*/
-#bandeau {
-	width=80%;
-  grid-column: 2/-1;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  background-color: white;
-	position: sticky;
-	top: 0px;
-}
-
-
-
-#bandeau a {
-  /* transition: all 0.2s ;          /* Ajout des effets de transition */ */
-}
-
-#bandeau ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-/* #logo {
-  height: 100%;
-} */
-
-#bandeau img {
-  height: 47px;
-  width: 100%;
-  padding-left: 10px;
-  padding-right: 5px;
-  padding-top: 5px;
-}
-
-#bandeau ul li {
-	float: left;
-}
-
-#bandeau li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 15px 25px;
-  text-decoration: none;
-}
-
-#bandeau a:hover {
-	color: #ffc442;
-}
-
-#bandeau li a:hover:not(.active) {
-  background-color: #111;
-}
-
-.active {
-  background-color: #427dff;
-}
-/* https://www.pierre-giraud.com/html-css-apprendre-coder-cours/creation-menu-deroulant/ */
-
-
-/*
-INDEX---------------------------------------------------------------------------
-*/
-#containerStart {
-  background-image: url("image/image_fond.png");
-}
-
-#login {
-  grid-column: 2;
-  grid-row: 1;
-  margin: auto;
-}
-
-/*
-INDEX - Bouton Start -----------------------------------------------------------
-*/
-.button {
-  grid-column: 2;
-  grid-row: 2;
-  margin: auto;
-
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  /* text-align: center; */
-  height:100px;
-  width:200px;
-  border: 0;
-  line-height: 2.5;
-  padding: 0 20px;
-  font-size: 1rem;
-  text-align: center;
-  color: #fff;
-  text-shadow: 1px 1px 1px #000;
-  border-radius: 10px;
-  background-color: #427dff;
-  background-image: linear-gradient(to top left,
-                                    rgba(0, 0, 0, .2),
-                                    rgba(0, 0, 0, .2) 30%,
-                                    rgba(0, 0, 0, 0));
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-              inset -2px -2px 3px rgba(0, 0, 0, .6);
-}
-
-.button:hover {
-    color: #427dff;
-    background-color: #ffc442;
-}
-
-.button:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-                inset 2px 2px 3px rgba(0, 0, 0, .6);
-}
-
-/*
-GAME---------------------------------------------------------------------------
-*/
-
-#map {
-  z-index: 1;
-  grid-row: 1/5;
-  grid-column: 1/3;
-}
-
-#carnet {
-  grid-column: 3;
-  grid-row: 2;
-}
-#carnet img {
-  width: 100%;
-  height: 100%;
-}
-
-#bestScores {
-  grid-column: 3;
-  grid-row: 3;
-}
-
-#inventaire {
-  grid-column: 1;
-  grid-row: 4;
-
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: 100%;
-  padding-left:4px;
-  padding-bottom: 4px;
-
-  z-index: 3;
-
-  /* background: url(image/inventaire.PNG) no-repeat;
-  background-size: auto 100%; */
-}
-
-#inventaire img {
-    height:100%;
-    z-index: 1;
-}
-
-
-/*
-CONTACT----------------------------------------------------------------------------
-*/
 .contact {
   grid-column: 2;
   grid-row: 2/4;
@@ -247,15 +10,16 @@ CONTACT-------------------------------------------------------------------------
 }
 
 .contact h1, .contact p {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   font-family: monospace;
 }
 .contact h1 {
+  font-size: 2rem;
   font-family: 'Dancing Script';
 }
 
-.contact textarea, .contact input, .contact button {
+.contact textarea, input, button {
   line-height: 1.5rem;
   border: 0;
   outline: none;
@@ -264,7 +28,7 @@ CONTACT-------------------------------------------------------------------------
      -moz-appearance: none;
           appearance: none;
 }
-.contact textarea, .contact input {
+.contact textarea, input {
   color: #4e5e72;
   background-color: transparent;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgb(229, 225, 187)' x='0' y='23' width='10' height='1'/></svg>");
@@ -278,7 +42,7 @@ CONTACT-------------------------------------------------------------------------
  width: 50%;
  margin-bottom: 1rem;
 }
-.contact input[type=text]:invalid, .contact input [type=email]:invalid {
+.contact input[type=text]:invalid, input [type=email]:invalid {
     box-shadow: none;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgba(240, 132, 114, 0.5)' x='0' y='23' width='10' height='1'/></svg>");
   }
@@ -457,17 +221,3 @@ CONTACT-------------------------------------------------------------------------
 /*
 https://codepen.io/wwwebneko/pen/RRQKzZ
 */
-
-
-/*
-FIN----------------------------------------------------------------------------
-*/
-
-#imageFin {
-  grid-column: 1/-1;
-  grid-row: 1/-1;
-}
-#imageFin img {
-  height: 100%;
-  weight: auto;
-}
