--- a/style.css
+++ b/style.css
@@ -232,6 +232,95 @@ GAME---------------------------------------------------------------------------
     z-index: 1;
 }
 
+/*
+POPUP----------------------------------------------------------------------------
+*/
+
+.popup {
+  text-align: center;
+  font-family: monospace;
+  /* overflow: hidden; */
+  z-index: 9999;
+}
+
+.popup p {
+ width: 100%;
+ height: 8rem;
+ resize: none;
+}
+
+#popupTel {
+  width: 4rem;
+  height: 10rem;
+}
+
+#popupTel img {
+  width: 100%;
+  height: 100%
+}
+
+.popup button {
+  line-height: 1.5rem;
+  border: 0;
+  outline: none;
+  font-family: inherit;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  background-color: rgba(78, 94, 114, 0.9);
+  color: white;
+  font-size: 1rem;
+  transition: background-color 0.2s;
+}
+.popup button:hover,.popup button :focus {
+  outline: none;
+  background-color: rgba(78, 94, 114, 1);
+  }
+}
+.popup {
+  width: 35rem;
+  background-color: white;
+}
+.popup {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  width: 30rem;
+  margin: auto;
+  perspective: 60rem;
+  height: 16rem;
+  background-color: #fcfcf8;
+  outline: 1px solid transparent;
+  padding: 2rem 2rem 0;
+  border-radius: 1rem 1rem 1rem 1rem;
+  box-shadow: inset 0 0.75rem 2rem rgba(229, 225, 187, 0.5);
+  }
+
+.sent button {
+    background-color: rgba(78, 94, 114, 0.2);
+  }
+
+.sent .popup {
+  -webkit-animation: fadeOutPopup 1.33s forwards ease-out;
+          /* animation: fadeOutPopup 1.33s forwards ease-out; */
+}
+
+.centered {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 1rem auto;
+}
+
+@keyframes fadeOutPopup {
+  100% {opacity: 0; transform: translateY(-20rem);}
+  0% {opacity: 1; transform: translateY(1.5rem);}
+}
+
+@keyframes fadeInPopup {
+  0% {opacity: 0; transform: translateY(20rem);}
+  100% {opacity: 1; transform: translateY(1.5rem);}
+}
 
 /*
 CONTACT----------------------------------------------------------------------------
