--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ POPUP---------------------------------------------------------------------------
  width: 100%;
  height: 8rem;
  resize: none;
+ padding-top: 2em;
 }
 
 #popupTel {
@@ -322,30 +323,12 @@ POPUP---------------------------------------------------------------------------
   box-shadow: inset 0 0.75rem 2rem rgba(229, 225, 187, 0.5);
   }
 
-/* .sent button {
-    background-color: rgba(78, 94, 114, 0.2);
-  }
-
-.sent .popup {
-  -webkit-animation: fadeOutPopup 1.33s forwards ease-out;
-  } */
-
 .centered {
   position: absolute;
   left: 0;
   right: 0;
   margin: 1rem auto;
 }
-/*
-@keyframes fadeOutPopup {
-  100% {opacity: 0; transform: translateY(-20rem);}
-  0% {opacity: 1; transform: translateY(1.5rem);}
-}
-
-@keyframes fadeInPopup {
-  0% {opacity: 0; transform: translateY(20rem);}
-  100% {opacity: 1; transform: translateY(1.5rem);}
-} */
 
 /*
 CONTACT----------------------------------------------------------------------------
