tableau des scores ok

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ POPUP---------------------------------------------------------------------------
 
 .popup p {
  width: 100%;
- height: 8rem;
+ /* height: 8rem; */
  resize: none;
  padding-top: 2em;
 }
@@ -283,6 +283,7 @@ POPUP---------------------------------------------------------------------------
 }
 
 #imageTel img {
+  margin-right: 2em;
   width: 100%;
   height: 100%
 }
