--- a/style.css
+++ b/style.css
@@ -643,6 +643,13 @@ FIN----------------------------------------------------------------------------
   display:flex
 }
 #imageFin img {
-  weight: ;
-  height: auto;
+  weight: auto;
+  height: 30em;
+  margin: auto;
+}
+
+#textfin {
+  grid-row: 4;
+  grid-column: 2;
+  text-align: center;
 }
