--- a/style.css
+++ b/style.css
@@ -260,10 +260,13 @@ GAME---------------------------------------------------------------------------
   text-align: center;
 }
 
+#indiceText {
+  text-align: center;
+}
+
 #indiceSup {
-  margin-left: 1em;
-  display: inline-block;
-  margin-top: 5em;
+  text-align: center;
+  width: 100%;
 }
 
 #bestScores {
