--- a/style.css
+++ b/style.css
@@ -378,6 +378,11 @@ SOLUTION------------------------------------------------------------------------
     padding: 2em;
 }
 
+/* .soluce .dernierScenario {
+  grid-column: 2;
+  grid-row: 3;
+} */
+
 /*
 SCORES----------------------------------------------------------------------------
 */
